Ajustado o input valor para nao permitir que o usuario possa colar valores que nao sao numericos e retirado o reload da pagina apos submeter, porem agora nao esta apagando as informacoes do form depois de submeter, ainda preciso validar isso

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
                 name="valor"
                 id="valor"
                 placeholder="R$ 0,00"
-                onfocusout="validarValor()"
+                onfocusout="validarValor(event)"
+                onpaste="validarValor(event)" 
+                ondrop="validarValor(event)"
                 required
               />
             </div>
